# Hajri.ai

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  FIXES_APPLIED.md  LICENSE  Makefile  QUICK_START.md  README.md  RESTRUCTURE_PLAN.md  app.py  docker-compose.yml  hajri_css.py  hajri_utils.py  hajri_views.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
data/: hajri.db
data/training_images/: ds_model_sface_detector_opencv_aligned_normalization_base_expand_0.pkl
docs/: CONTRIBUTING.md  FINAL_STRUCTURE.md  MIGRATION_COMPLETE.md  PROFESSIONAL_RESTRUCTURE.md  QUICK_START.md  RESTRUCTURE_SUMMARY.md
scripts/: backup_data.py  cleanup_old_files.py  setup_db.py
src/: __init__.py  app.py  compat.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  connection.py  db_manager.py
src/legacy/: __init__.py  hajri_utils.py
src/services/: __init__.py  attendance_service.py  email_service.py  image_service.py  report_service.py
src/ui/: styles.py
src/ui/views/: admin_view.py  student_view.py  teacher_view.py
src/utils/: helpers.py
versions/: app.py  hajri_notify.py  hajri_utils.py
